about page spacing fix

--- a/css/about.scss
+++ b/css/about.scss
@@ -17,7 +17,8 @@ h1.hero-tagline {
 .about-row {
   .card {
     text-align: center;
-    padding: 1rem 5rem;
+    padding: 2rem 5rem;
+    margin-bottom: 4.5rem;
 
     svg {
       display: inline-block;
